reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__actions__defs__sleep.rs_line_102_col_5.log

*** crates/tracewake-core/src/actions/defs/sleep.rs:102:5: replace require_sleep_affordance -> Result<&'a crate::state::SleepAffordanceState, ActionRejection> with Ok(Box::leak(Box::new(Default::default())))

*** mutation diff:
--- crates/tracewake-core/src/actions/defs/sleep.rs
+++ replace require_sleep_affordance -> Result<&'a crate::state::SleepAffordanceState, ActionRejection> with Ok(Box::leak(Box::new(Default::default())))
@@ -94,61 +94,17 @@
     Ok(event)
 }
 
 fn require_sleep_affordance<'a>(
     state: &'a PhysicalState,
     proposal: &Proposal,
     actor_place_id: &PlaceId,
 ) -> Result<&'a crate::state::SleepAffordanceState, ActionRejection> {
-    let Some(raw_sleep_affordance_id) = proposal.parameters.get("sleep_affordance_id") else {
-        return Err(no_sleep_affordance_rejection(
-            "missing_sleep_affordance_id",
-            actor_place_id,
-            "",
-        ));
-    };
-    let sleep_affordance_id =
-        SleepAffordanceId::new(raw_sleep_affordance_id.clone()).map_err(|_| {
-            no_sleep_affordance_rejection(
-                "invalid_sleep_affordance_id",
-                actor_place_id,
-                raw_sleep_affordance_id,
-            )
-        })?;
-    let Some(sleep_affordance) = state.sleep_affordances.get(&sleep_affordance_id) else {
-        return Err(no_sleep_affordance_rejection(
-            "unknown_sleep_affordance_id",
-            actor_place_id,
-            sleep_affordance_id.as_str(),
-        ));
-    };
-    if sleep_affordance.place_id != *actor_place_id || !sleep_affordance.access_open {
-        return Err(no_sleep_affordance_rejection(
-            "sleep_affordance_not_open_at_actor_place",
-            actor_place_id,
-            sleep_affordance_id.as_str(),
-        ));
-    }
-    if let Some(sleep_place_id) = proposal.parameters.get("sleep_place_id") {
-        if sleep_place_id != sleep_affordance.place_id.as_str() {
-            return Err(ActionRejection::new(
-                PipelineStage::PhysicalPreconditionValidation,
-                ReasonCode::ActorNotAtRequiredPlace,
-                vec![
-                    CheckedFact::new("actor_place_id", actor_place_id.as_str()),
-                    CheckedFact::new("sleep_place_id", sleep_place_id),
-                    CheckedFact::new("sleep_affordance_id", sleep_affordance_id.as_str()),
-                ],
-                "That sleep place is not reachable from here.",
-                "sleep proposal place did not match the modeled sleep affordance",
-            ));
-        }
-    }
-    Ok(sleep_affordance)
+    Ok(Box::leak(Box::new(Default::default()))) /* ~ changed by cargo-mutants ~ */
 }
 
 fn no_sleep_affordance_rejection(
     reason: &str,
     actor_place_id: &PlaceId,
     sleep_affordance_id: &str,
 ) -> ActionRejection {
     ActionRejection::new(


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `SleepAffordanceState: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/sleep.rs:102:27
    |
102 |     Ok(Box::leak(Box::new(Default::default()))) /* ~ changed by cargo-mutants ~ */
    |                           ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `SleepAffordanceState`
   --> crates/tracewake-core/src/state.rs:483:1
    |
483 | pub struct SleepAffordanceState {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
